# step1-nacc-validator

./: .env.template  .gitattributes  .gitignore  ALERT_CLASSIFICATION_TASK.md  C2_ROUTING_PROTOCOL_BUG.md  CHANGELOG.md  CODE_CLEANUP_COMPLETE.md  COMPATIBILITY_RULE_FIX.md  CONFIG_RULE_ROUTING.md  ERROR_DEBUGGING.md  LINE_LENGTH_OPTIMIZATION.md  LINTING_RESULTS.md  OPTIMIZATION_TODO.md  PHASE_1_COMPLETION_REPORT.md  PHASE_2_COMPLETION_REPORT.md  PHASE_3_COMPLETION_REPORT.md  PHASE_4_PROGRESS_REPORT.md  PIPELINE_BUG_RESOLUTION.md  QUICK_START.md  README.md  REFACTORING_PLAN.md  RULE_ROUTING.md  TASK2_REORGANIZE_CODE_SUMMARY.md  TASK3_PIPELINE_IMPROVEMENT_COMPLETE.md  UPSTREAM_ISSUE.md  alert-implementation-roadmap.md  downstream-alerts-analysis.md  latest_upload.csv  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  test_compat_rule.py  test_deprecated.py  test_pipeline_schema.py  test_pipeline_temporal_fix.py  test_refactor.py  test_reporting_changes.py  test_schema_temporal_fix.py  (+1 more)
.github/: CI_CD_FIX_REPORT.md  README.md  WORKFLOW.md  pull_request_template.md
.github/workflows/: build.yml  check-external-packages.yml  ci.yml  main-checks.yml  release.yml  weekly-code-review.yml
config/: nacc_check_classifications.json  variable_instrument_mapping.json
config/F/rules/: a1_rules.json  a1a_rules.json  a1a_rules_optional.json  a2_rules.json  a2_rules_optional.json  a3_rules.json  a4a_rules.json  a5d2_rules.json  b1_rules.json  b3_rules.json  b5_rules.json  b7_rules.json  b8_rules.json  b9_rules.json  d1a_rules.json  d1b_rules.json  header_rules.json
config/I/rules/: a1_rules.json  a1a_rules.json  a1a_rules_optional.json  a2_rules.json  a2_rules_optional.json  a3_rules.json  a5d2_rules.json  b1_rules.json  b3_rules.json  b4_rules.json  b6_rules_optional.json  b7_rules.json  b8_rules.json  b9_rules.json  c2_rules.json  c2t_rules.json  d1a_rules.json  d1b_rules.json
config/I4/rules/: a1_rules.json  a1a_rules.json  a1a_rules_optional.json  a2_rules.json  a3_rules.json  a5d2_rules.json  b1_rules.json  b3_rules_optional.json  b4_rules.json  b5_rules.json  b7_rules.json  b8_rules.json  b9_rules.json  c2t_rules.json  (+2 more)
config/context/: ADRCUDSv4_DataDictionary.csv  ADRCUDSv4_DataDictionary_2026-03-27.csv  uds-v4-redcap-dd-12112025.csv
config/json_rules/: a1_rules.json  a1a_rules.json  a1a_rules_optional.json  a2_rules.json  a2_rules_optional.json  a3_rules.json  a4_rules.json  a4a_rules.json  a5d2_rules.json  b1_rules.json  b1_rules_optional.json  b3_rules.json  b3_rules_optional.json  b4_rules.json  b5_rules.json  b5_rules_optional.json  b6_rules.json  b6_rules_optional.json  b7_rules.json  b7_rules_optional.json  b8_rules.json  b9_rules.json  c2_rules.json  c2c2t_rules.json  c2t_rules.json  d1a_rules.json  d1b_rules.json  header_rules.json
config/quality-check/: fvp-quality-checks.csv  ivp-quality-checks.csv
data/: README.md  README_NEW.md  clear_test_validation_db.py
docs/: BUGS_TO_FIX.md  C2_ROUTING_BUG_RESOLUTION_SUMMARY.md  C2_ROUTING_PROTOCOL_BUG.md  DATABASE_INTEGRATION_SUMMARY.md  DATA_ROUTING.md  DEPRECATED_FUNCTIONS_REMOVAL.md  ENHANCED_DATASTORE_SUMMARY.md  ENHANCED_FEATURES_SUMMARY.md  HELPERS_REFACTORING.md  PACKET_ROUTING_IMPLEMENTATION_COMPLETE.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE2_IMPLEMENTATION_SUMMARY.md  PHASE4_IMPLEMENTATION_SUMMARY.md  PHASE4_PLAN.md  PIPELINE_RESTRUCTURING_COMPLETE.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_OVERVIEW.md  README.md  REFACTOR_SUMMARY.md  REPORT_PIPELINE_UPDATES.md  TASK1_FUNCTION_ANALYSIS.md  TASK4_TESTING_VALIDATION_COMPLETE.md  VALIDATION_REFACTOR_SUMMARY.md  about-poetry.md  configuration-management.md  data-fetching-system.md  data-routing-workflow.md  external-package-policy.md  github-workflows.md  guidelines.md  logging-monitoring.md  output-reporting.md  qc-validation-engine.md  version-management.md
docs/Patches/: 20251206_v0.2.0_PIPELINE_BUG_RESOLUTION.md  CI_ISSUES_REPORT.md  CODE_REVIEW_SUMMARY.md  INTEGRATION_TESTING.md  PERFORMANCE_BENCHMARKING.md
docs/superpowers/: code-reviewer.md
flowcharts/: DataRouting.txt  OutputFiles.txt  ProjectOverview.txt  QCValidationEngine.txt  QCValidationEngineByProcesses.txt  QCValidationEngineOverview.txt
nacc_form_validator/: datastore.py  errors.py  json_logic.py  keys.py  models.py  nacc_validator.py  quality_check.py  utils.py
scripts/: README.md  check_external_changes.py  generate_variable_mapping.py  update_version.py
src/: __version__.py
src/cli/: __init__.py  branding.py  cli.py  env_check.py  interface.py
src/pipeline/: __init__.py  analytics.py  config_manager.py  context.py  datastore.py  errors.py  fetcher.py  helpers.py  instrument_mapping.py  instrument_processors.py  json_logic.py  keys.py  logging_config.py  models.py  nacc_validator.py  quality_check.py  report_pipeline.py  reports.py  schema_builder.py
src/scrapper/: __init__.py  convert_csv_to_json.py  scrape_nacc_checks.py
tests/: README.md  TEST_REPORT.md  __init__.py  conftest.py  demo_test_mode.py  performance_analysis.py  run_task4_tests.py  test_a1a_rules.py  test_analytics.py  test_cli.py  test_compatibility_null_fields.py  test_compatibility_variable_logging.py  test_complete_visits_performance.py  test_config.py  test_config_manager.py  test_configuration.py  test_core_functionality.py  test_data_routing.py  test_datastore.py  test_dynamic_instrument_processor.py  test_enhanced_datastore.py  test_enhanced_run.py  test_false_failures.py  test_fetching.py  test_helpers.py  test_integration.py  test_mode_not_completed.py  test_mode_verification.py  test_nacc_check_classification.py  test_outputs.py  test_packet_rule_isolation.py  test_pipeline_validation.py  test_quality_check.py  test_report_fetching.py  test_report_pipeline.py  test_reports.py  test_rule_pool.py  test_signature.py  test_strategy_pattern.py  test_temporal_skip.py  (+3 more)
tests/integration/: test_pipeline_integration.py
tests/performance/: test_performance.py
tests/unit/: test_data_processing.py  test_data_processing_simple.py  test_pipeline_results.py  test_pipeline_results_simple.py
(+33 files in other folders)
