[tool.poetry]
name = "udsv4-redcap-qc-validator"
version = "0.1.0"
description = "QC validator for UDSv4 REDCap data"
readme = "README.md"
license = "MPL-2.0"
packages = [
    { include = "nacc_form_validator" },
    { include = "pipeline", from = "src" },
    { include = "cli", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.11"
cerberus = ">=1.3.5"
python-dateutil = ">=2.9.0"
types-python-dateutil = ">=2.9.0.20240316"
json-logic = "*"
python-dotenv = "*"
python-decouple = "*"
jsonschema = "*"
pandas = "*"
requests = "*"
setuptools = "*"
ipython = "*"
click = ">=8.0.0"
rich = ">=13.0.0"
typer = ">=0.9.0"

[tool.poetry.scripts]
udsv4-qc = "cli.cli:cli"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
ruff = "^0.12.0"
mypy = "^1.0.0"
wheel = "^0.40.0"
build = "^0.10.0"
twine = "^5.0.0"
requests-mock = "^1.12.1"
types-python-dateutil = "^2.9.0.20250822"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "S", "SIM", "PL"]
ignore = ["S101", "PLR2004"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR2004"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true